--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -121,6 +121,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginEnd="131dp"
+        android:layout_marginBottom="5dp"
         android:layout_marginRight="131dp"
         android:background="@drawable/corner3"
         android:text="Log in"
