--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,193 +7,191 @@
     tools:context=".MainActivity"
     android:background="#212121">
 
-    <View
-        android:id="@+id/divider3"
-        android:layout_width="145dp"
-        android:layout_height="3dp"
-        android:layout_marginTop="40dp"
-        android:background="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.046"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signup_button" />
-
-    <EditText
-        android:id="@+id/password_edit_text"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="24dp"
-        android:background="@drawable/corners"
-        android:ems="10"
-        android:hint="Password"
-        android:drawableLeft="@drawable/ic_action_password"
-        android:drawablePadding="15dp"
-        android:inputType="textEmailAddress"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        app:layout_constraintEnd_toEndOf="@+id/email_edit_text"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/email_edit_text"
-        app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />
-
-    <EditText
-        android:id="@+id/email_edit_text"
-        android:layout_width="300dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="20dp"
-        android:background="@drawable/corners"
-        android:ems="10"
-        android:hint="Enter email"
-        android:drawableLeft="@drawable/ic_action_email"
-        android:drawablePadding="15dp"
-        android:inputType="textEmailAddress"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        app:layout_constraintEnd_toEndOf="@+id/name_edit_text"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/name_edit_text"
-        app:layout_constraintTop_toBottomOf="@+id/name_edit_text" />
-
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/welcome_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="5dp"
+        android:text="Welcome"
+        android:textColor="@color/white"
+        android:textSize="40sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/create_acc_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:fontFamily="sans-serif-smallcaps"
         android:text="Create Account"
+        android:layout_margin="5dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textSize="32sp"
         android:textColor="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
+        android:layout_below="@+id/welcome_txt"
+        android:layout_centerHorizontal="true"/>
 
     <EditText
-        android:id="@+id/name_edit_text"
+        android:id="@+id/user_name_edittext"
         android:layout_width="300dp"
         android:layout_height="50dp"
-        android:layout_marginTop="28dp"
+        android:layout_below="@+id/create_acc_txt"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="5dp"
         android:background="@drawable/corners"
         android:drawableLeft="@drawable/ic_action_user"
         android:drawablePadding="15dp"
         android:ems="10"
         android:hint="Full Name"
         android:inputType="textEmailAddress"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginLeft="32dp"
-        android:layout_marginTop="70dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="4dp"
-        android:text="already have an account"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/login_button"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/facebook_sign_in_button" />
-
-    <TextView
-        android:id="@+id/textView6"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="@color/white"
-        android:layout_marginTop="16dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Welcome"
-        android:textSize="40sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Button
-        android:id="@+id/login_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="131dp"
+    <EditText
+        android:id="@+id/email_edittext"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/user_name_edittext"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"
         android:layout_marginBottom="5dp"
-        android:layout_marginRight="131dp"
-        android:background="@drawable/corner3"
-        android:text="Log in"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/textView4" />
+        android:background="@drawable/corners"
+        android:drawableLeft="@drawable/ic_action_email"
+        android:drawablePadding="15dp"
+        android:ems="10"
+        android:hint="Enter email"
+        android:inputType="textEmailAddress"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
+
+    <EditText
+        android:id="@+id/password_edittext"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_below="@+id/email_edittext"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="12dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/corners"
+        android:drawableLeft="@drawable/ic_action_password"
+        android:drawablePadding="15dp"
+        android:ems="10"
+        android:hint="Enter password"
+        android:inputType="textEmailAddress"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />
 
     <Button
-        android:id="@+id/signup_button"
+        android:id="@+id/sign_up_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_below="@id/password_edittext"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/corners2"
+        android:padding="10dp"
         android:text="Sign Up"
-        app:layout_constraintEnd_toEndOf="@+id/password_edit_text"
-        app:layout_constraintStart_toStartOf="@+id/password_edit_text"
-        app:layout_constraintTop_toBottomOf="@+id/password_edit_text" />
+        android:textSize="20sp" />
 
-    <View
-        android:id="@+id/divider"
-        android:layout_width="145dp"
-        android:layout_height="3dp"
-        android:layout_marginTop="40dp"
-        android:background="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.936"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signup_button" />
-
-    <TextView
-        android:id="@+id/textView2"
+    <LinearLayout
+        android:id="@+id/divider_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="19dp"
-        android:text="or"
-        android:textColor="@color/white"
-        android:textSize="28sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signup_button" />
+        android:layout_below="@id/sign_up_button"
+        android:layout_margin="20dp"
+        android:orientation="horizontal">
+
+        <View
+            android:id="@+id/dividerL"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="3dp"
+            android:layout_marginTop="18dp"
+            android:background="@color/white" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="28sp"
+            android:text="or"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:textColor="@color/white"/>
+
+        <View
+            android:id="@+id/dividerR"
+            android:layout_width="0dp"
+            android:layout_weight="2"
+            android:layout_height="3dp"
+            android:layout_marginTop="18dp"
+            android:background="@color/white" />
+
+    </LinearLayout>
 
     <Button
-        android:id="@+id/facebook_sign_in_button"
+        android:id="@+id/sign_in_with_google_button"
+        android:layout_width="195dp"
+        android:layout_height="53dp"
+        android:layout_below="@id/divider_layout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="#F5F5F5"
+        android:drawableLeft="@drawable/goog"
+        android:gravity="center"
+        android:text="Sign in with Google"
+        android:textAllCaps="false"
+        android:textSize="14sp" />
+
+    <Button
+        android:id="@+id/sign_with_facebook_button"
         android:layout_width="191dp"
         android:layout_height="50dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="48dp"
+        android:layout_below="@id/sign_in_with_google_button"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="#4267B2"
+        android:gravity="center"
         android:drawableLeft="@drawable/fbicon"
         android:fontFamily="sans-serif-medium"
         android:text="Sign in with Facebook"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="14sp"
-        app:layout_constraintBottom_toTopOf="@+id/login_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/google_sign_in_button" />
+        android:textSize="14sp" />
+
+    <TextView
+        android:id="@+id/already_have_acc_txt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/sign_with_facebook_button"
+        android:layout_marginTop="40dp"
+        android:text="already have an account"
+        android:textColor="@color/white" />
 
     <Button
-        android:id="@+id/google_sign_in_button"
-        android:layout_width="195dp"
-        android:layout_height="53dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="4dp"
-        android:drawableLeft="@drawable/goog"
-        android:text="Sign in with Google"
-        android:textAllCaps="false"
-        app:layout_constraintBottom_toTopOf="@+id/facebook_sign_in_button"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        android:id="@+id/login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/sign_with_facebook_button"
+        android:layout_alignEnd="@id/already_have_acc_txt"
+        android:layout_alignRight="@id/already_have_acc_txt"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="-101dp"
+        android:layout_marginRight="-101dp"
+        android:background="@drawable/corner3"
+        android:padding="10sp"
+        android:text="Log in"
+        android:textSize="20sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
