--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -149,8 +149,7 @@
         android:text="Sign in with Google"
         android:textAllCaps="false"
         android:textSize="14sp" />
-
-    <Button
+    <com.facebook.login.widget.LoginButton
         android:id="@+id/sign_with_facebook_button"
         android:layout_width="191dp"
         android:layout_height="50dp"
@@ -167,7 +166,10 @@
         android:text="Sign in with Facebook"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="14sp" />
+        android:textSize="14sp"
+        android:onClick="buttonClickLoginFb"/>
+
+
 
     <TextView
         android:id="@+id/already_have_acc_txt"
