commit: Designed the Domain Section and just changed the ID of all the domains, previously they were textView now it had been converted to cardView and with GridLayout

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -149,6 +149,7 @@
         android:text="Sign in with Google"
         android:textAllCaps="false"
         android:textSize="14sp" />
+
     <com.facebook.login.widget.LoginButton
         android:id="@+id/sign_with_facebook_button"
         android:layout_width="191dp"
@@ -160,14 +161,14 @@
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="#4267B2"
-        android:gravity="center"
         android:drawableLeft="@drawable/fbicon"
         android:fontFamily="sans-serif-medium"
+        android:gravity="center"
+        android:onClick="buttonClickLoginFb"
         android:text="Sign in with Facebook"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        android:textSize="14sp"
-        android:onClick="buttonClickLoginFb"/>
+        android:textSize="14sp" />
 
 
 
