--- a/app/src/main/res/layout/activity_domain_sections.xml
+++ b/app/src/main/res/layout/activity_domain_sections.xml
@@ -10,14 +10,9 @@
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginStart="28dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginTop="28dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginRight="28dp"
-        android:layout_marginBottom="28dp"
-        android:columnCount="2"
-        android:rowCount="3">
+        android:layout_margin = "20dp"
+        android:rowCount="3"
+        android:columnCount="2">
 
         <androidx.cardview.widget.CardView
             android:id="@+id/fashion_domain"
@@ -247,6 +242,8 @@
             </LinearLayout>
         </androidx.cardview.widget.CardView>
 
+
     </GridLayout>
+
 
 </RelativeLayout>
