commit: Create the user profile interface and created a class to store the info about the user and some small changes.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primary_dark">#292b3d</color>
+    <color name="gray">#fafafa</color>
+    <color name="start_blue">#09c6df</color>
+    <color name="end_blue">#0bcce6</color>
+
 </resources>
