--- a/app/src/main/res/drawable/corner3.xml
+++ b/app/src/main/res/drawable/corner3.xml
@@ -5,7 +5,7 @@
             android:shape="rectangle"
             android:padding="10dp">
 
-            <solid android:color="#483D8B" />
+            <solid android:color="#808080" />
             <corners
                 android:bottomRightRadius="30dp"
                 android:bottomLeftRadius="30dp"
