--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="login_Theme" parent="Theme.AppCompat.Light.NoActionBar">
-
+    <style name="NoActionBarTheme" parent="Theme.AppCompat.Light.NoActionBar">
     </style>
+
+    <style name="DomainTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+        <item name="colorPrimary">@color/navy_blue</item>
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+    </style>
+
     <style name="CustomDialogTheme" parent="@android:style/Theme.Dialog">
         <item name="android:bottomBright">#fff</item>
         <item name="android:bottomDark">#fff</item>
