--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -22,7 +22,7 @@
                 android:layout_height="100dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="45dp"
-                android:src="@drawable/user_profile" />
+                android:src="@drawable/user_profile_img" />
 
             <TextView
                 android:layout_width="wrap_content"
