commit: done some work on Chat Details activity and added all the back buttons on the toolbar of all the section to the parent Activity DomainSections

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,6 @@
     <color name="start_blue">#09c6df</color>
     <color name="end_blue">#0bcce6</color>
     <color name="navy_blue">#145DA0</color>
+    <color name="chatBackground">#AAAAAA</color>
 
 </resources>
