--- a/app/src/main/res/drawable/corners4.xml
+++ b/app/src/main/res/drawable/corners4.xml
@@ -5,7 +5,7 @@
         android:shape="rectangle"
         android:padding="10dp">
 
-        <solid android:color="#FA8072" />
+        <solid android:color="@color/white" />
         <corners
             android:bottomRightRadius="30dp"
             android:bottomLeftRadius="30dp"
