--- a/app/src/main/res/layout/show_users.xml
+++ b/app/src/main/res/layout/show_users.xml
@@ -5,7 +5,7 @@
     android:orientation="horizontal">
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:id="@+id/profile_image"
+        android:id="@+id/chatDetailsProfilePic"
         android:layout_width="70dp"
         android:layout_height="70dp"
         android:layout_marginLeft="5dp"
