--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,10 +4,16 @@
     <style name="NoActionBarTheme" parent="Theme.AppCompat.Light.NoActionBar">
     </style>
 
+    <style name="chatDetailsTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorPrimaryDark">@color/primary_dark</item>
+    </style>
+
     <style name="DomainTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <item name="colorPrimary">@color/navy_blue</item>
         <item name="colorPrimaryDark">@color/primary_dark</item>
     </style>
+
+
 
     <style name="CustomDialogTheme" parent="@android:style/Theme.Dialog">
         <item name="android:bottomBright">#fff</item>
@@ -20,6 +26,7 @@
         <item name="android:fullDark">#7D266A</item>
         <item name="android:topBright">#2f6699</item>
         <item name="android:topDark">#2f6699</item></style>
+
     </resources>
 
 
