--- a/app/src/main/res/layout/activity_chat_details.xml
+++ b/app/src/main/res/layout/activity_chat_details.xml
@@ -61,13 +61,13 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.appcompat.widget.Toolbar>
-    
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/chatRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/toolbar"
-        android:layout_above="@id/linear_chat_details"/>
+        android:layout_above="@id/linear_chat_details"
+        android:layout_below="@id/toolbar" />
 
     <LinearLayout
         android:id="@+id/linear_chat_details"
@@ -78,7 +78,7 @@
 
 
         <EditText
-            android:id="@+id/editTextTextPersonName"
+            android:id="@+id/send_message_edittext"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginLeft="4dp"
@@ -90,7 +90,7 @@
             android:hint="Type Here" />
 
         <ImageView
-            android:id="@+id/imageView2"
+            android:id="@+id/send_arrow"
             android:layout_width="45dp"
             android:layout_height="45dp"
             android:layout_marginLeft="5dp"
