--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,5 +14,6 @@
     <color name="end_blue">#0bcce6</color>
     <color name="navy_blue">#145DA0</color>
     <color name="chatBackground">#AAAAAA</color>
+    <color name="lightGreen">#e5ffcc</color>
 
 </resources>
