--- a/app/src/main/res/layout/activity_domain_sections.xml
+++ b/app/src/main/res/layout/activity_domain_sections.xml
@@ -15,7 +15,7 @@
         android:columnCount="2">
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/fashion_domain"
+            android:id="@+id/indiviual_chat_domain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="0"
@@ -38,13 +38,13 @@
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/fashion_domain" />
+                    android:src="@drawable/other_domain" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
-                    android:text="Fashion"
+                    android:text=" Individual \nChats"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
@@ -129,7 +129,7 @@
         </androidx.cardview.widget.CardView>
 
         <androidx.cardview.widget.CardView
-            android:id="@+id/other_domain"
+            android:id="@+id/fashion_domain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="1"
@@ -152,13 +152,13 @@
                 <ImageView
                     android:layout_width="80dp"
                     android:layout_height="80dp"
-                    android:src="@drawable/other_domain" />
+                    android:src="@drawable/fashion_domain" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal"
-                    android:text="Others"
+                    android:text="Fashion"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
