--- a/app/src/main/res/layout/show_users.xml
+++ b/app/src/main/res/layout/show_users.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal">
 
     <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -20,14 +21,31 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/userNameChats"
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="User Name"
-            android:textStyle="bold"
-            android:padding = "5dp"
-            android:textSize="20sp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/userNameChats"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:text="User Name"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+             <ImageView
+                 android:id="@+id/img_online"
+                 android:layout_width="35dp"
+                 android:layout_height="35dp"
+                 android:src="@drawable/ic_action_online"
+                 android:layout_alignParentRight="true"
+                 android:layout_centerVertical="true"
+                 android:layout_margin="15dp"
+                 android:visibility="gone"/>
+
+        </RelativeLayout>
 
     </LinearLayout>
 
