--- a/app/src/main/res/layout/activity_fashion.xml
+++ b/app/src/main/res/layout/activity_fashion.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/chatBackground"
-    tools:context=".ChatDetailsActivity">
+    tools:context=".FashionDomain">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
