--- a/app/src/main/res/layout/group_chat_receiver_sample.xml
+++ b/app/src/main/res/layout/group_chat_receiver_sample.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginStart="5dp"
     android:layout_marginLeft="5dp"
@@ -14,6 +14,21 @@
     android:minHeight="30dp"
     android:layout_marginTop="5dp"
     android:layout_marginBottom="4dp">
+
+    <TextView
+        android:id="@+id/userName_receiver_textview_group_chat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="userName"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@id/reciever_textviewGroup"
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"/>
 
     <TextView
         android:id="@+id/reciever_textviewGroup"
