commit: Added image sharing options to the individual chats and changed sender and receiver chat bubbles and also MessagesModels

--- a/app/src/main/res/layout/activity_chat_details.xml
+++ b/app/src/main/res/layout/activity_chat_details.xml
@@ -74,20 +74,37 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_margin="5dp"
         android:orientation="horizontal">
 
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@drawable/corners4"
+            android:layout_weight="3"
+            android:orientation="horizontal">
 
         <EditText
             android:id="@+id/send_message_edittext"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:layout_marginLeft="4dp"
-            android:layout_marginBottom="4dp"
             android:layout_weight="1"
-            android:background="@drawable/corners4"
             android:ems="10"
-            android:padding="5dp"
+            android:padding="8dp"
+            android:layout_marginLeft="4dp"
             android:hint="Type Here" />
+
+            <ImageView
+                android:id="@+id/attachment"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:padding="2dp"
+                android:layout_marginRight="2dp"
+                android:layout_marginTop="2dp"
+                android:src="@drawable/ic_action_attachment"
+                />
+
+        </LinearLayout>
 
         <ImageView
             android:id="@+id/send_arrow"
@@ -96,6 +113,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="4dp"
             android:layout_marginBottom="4dp"
+            android:layout_weight="1"
             android:src="@drawable/ic_action_send_arrow" />
     </LinearLayout>
 
