--- a/app/src/main/res/layout/sample_receiver.xml
+++ b/app/src/main/res/layout/sample_receiver.xml
@@ -16,6 +16,25 @@
     android:id="@+id/receiver_constraint_layout"
     android:layout_marginBottom="4dp">
 
+    <ImageView
+        android:id="@+id/receiver_imageview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="5dp"
+        android:layout_marginBottom="5dp"
+        android:src="@drawable/grey_gallery_img"
+        android:visibility="gone"
+        android:scaleType="fitCenter"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:maxWidth="310dp"
+        android:padding="15dp"
+        android:maxHeight="400dp"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/reciever_textviewGroup"
         android:layout_width="wrap_content"
