--- a/app/src/main/res/layout/sample_senders.xml
+++ b/app/src/main/res/layout/sample_senders.xml
@@ -21,6 +21,24 @@
         android:maxHeight="400dp"
         android:minHeight="30dp">
 
+        <ImageView
+            android:id="@+id/sender_imageview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="5dp"
+            android:maxWidth="310dp"
+            android:maxHeight="400dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/grey_gallery_img"
+            android:visibility="gone"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.117" />
+
         <TextView
             android:id="@+id/sender_textview"
             android:layout_width="wrap_content"
@@ -36,9 +54,10 @@
             android:text="TextView"
             app:layout_constraintBottom_toTopOf="@+id/sendersTimeGroup"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.502"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.545" />
+            app:layout_constraintVertical_bias="0.679" />
 
         <TextView
             android:id="@+id/sendersTimeGroup"
