--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -183,6 +183,7 @@
         android:text="Sign in with Facebook"
         android:textAllCaps="false"
         android:textColor="@color/white"
+        android:visibility="gone"
         android:textSize="14sp" />
 
 </RelativeLayout>
