--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,7 +17,10 @@
         <item name="colorPrimaryDark">@color/primary_dark</item>
     </style>
 
-
+    <style name="popup_window" parent="Theme.AppCompat">
+      <item name="android:windowIsTranslucent">true</item>
+      <item name="android:windowCloseOnTouchOutside">true</item>
+    </style>
 
     <style name="CustomDialogTheme" parent="@android:style/Theme.Dialog">
         <item name="android:bottomBright">#fff</item>
