--- a/app/src/main/res/layout/chat_item_self.xml
+++ b/app/src/main/res/layout/chat_item_self.xml
@@ -1,8 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingLeft="16dp"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
+<LinearLayout
+    android:layout_alignParentRight="true"
+    android:orientation="vertical"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:background = "@drawable/watson_sent_item"
+    android:layout_margin="10dp"
     android:paddingBottom="5dp">
 
     <TextView
@@ -10,10 +17,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
-
+        android:text="watson"
+        android:layout_margin="5dp"
+        android:padding="2dp"
         android:textColor="@color/black"
         android:textIsSelectable="true"
         android:textSize="14sp" />
 
 </LinearLayout>
+</RelativeLayout>
