--- a/app/src/main/res/layout/content_chat_room.xml
+++ b/app/src/main/res/layout/content_chat_room.xml
@@ -6,7 +6,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".ChatBot"
+    android:background="@color/primary_dark"
     tools:showIn="@layout/activity_chat_bot">
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
         android:layout_width="match_parent"
@@ -14,24 +16,25 @@
         android:layout_marginBottom="50dp"
         android:scrollbars="vertical"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
-//hellov
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:background="@android:color/white"
+        android:background="@drawable/corners4"
         android:orientation="horizontal"
+        android:layout_margin="12dp"
         android:weightSum="4">
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/btn_record"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:layout_marginBottom="10dp"
             android:background="@null"
             android:elevation="0dp"
-            android:paddingLeft="10dp"
+            android:padding="4dp"
             android:scaleType="fitCenter"
             android:src="@mipmap/ic_mic" />
 
@@ -39,11 +42,10 @@
             android:id="@+id/message"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="10dp"
+            android:layout_margin="10dp"
             android:layout_weight="3"
             android:background="@null"
-            android:hint="@string/what_s_on_your_mind"
+            android:hint="Ask Here..."
             android:lines="1"
             android:paddingLeft="10dp" />
 
@@ -59,11 +61,10 @@
             android:id="@+id/btn_send"
             android:layout_width="0dp"
             android:layout_height="match_parent"
-            android:layout_marginBottom="10dp"
+            android:padding="6dp"
             android:layout_weight="1"
             android:background="@null"
             android:elevation="0dp"
-            android:paddingLeft="10dp"
             android:scaleType="fitCenter"
             android:src="@mipmap/ic_send" />
 
